remove inline onload.  hide document images

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 	<title>Simple Canvas</title>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script type="text/javascript" src="main.js"></script>
+	<style>img {display: none;}</style>
 </head>
-<body onload="init()">
+<body>
 	<canvas id="canvas" height="600" width="600"></canvas>
 	<img id="globie" src="globie.png">
 </body>
