--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<meta http-equiv="refresh" content="60">
+	<!--meta http-equiv="refresh" content="60"-->
 	<title>Globie on Holiday</title>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script type="text/javascript" src="main.js"></script>
@@ -10,22 +10,22 @@
 		font-size: 24px; 
 		font-family: sans-serif; 
 		font-weight: 700; 
-		width: 600px;
+		width: 1080;
 		margin-bottom: 12px;
 		text-align: center;
 	}
 	.container {
 		position: absolute;
-		width: 600px;
+		width: 1080px;
 		left: 50%;
-		margin-left: -300px;
+		margin-left: -540px;
 	}
 	</style>
 </head>
 <body>
 	<div class="container">
 		<div id="caption"></div>
-		<canvas id="canvas" height="600" width="600"></canvas>
+		<canvas id="canvas" height="1080" width="1080"></canvas>
 		<img id="globie" src="globie.png">
 	</div>
 	
