--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
 	<!--meta http-equiv="refresh" content="60"-->
+	<meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Globie on Holiday</title>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script type="text/javascript" src="main.js"></script>
