--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ nope: "js/polyfills/mediaqueries.js"
       <header id="header" class="container">
         <div class="row">
           <div class="col s12">
-            Instaglobal Holiday
+            <h2>Globies goes on an instaholiday</h2>
           </div>
         </div>
       </header>
@@ -56,7 +56,8 @@ nope: "js/polyfills/mediaqueries.js"
           <div class="col s12">
 
             <canvas id="generator" height="1000" width="1000"></canvas>
-            <div id="caption"></div>
+            <img id="output" height="1000" width="1000" />
+            <h1 id="caption"></h1>
 
           </div>
         </div>
@@ -65,8 +66,7 @@ nope: "js/polyfills/mediaqueries.js"
       <footer id="footer" class="container">
         <div class="row">
           <div class="col s12">
-            <a href="http://interglobal.vision">interglobal.vision</a>
-            <img id="globie" src="globie.png">
+            <img id="globie" src="img/dist/globie.png">
           </div>
         </div>
       </footer>
